--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/Multiplicom/axiom/issues"
   },
-  "homepage": "https://github.com/Multiplicom/axiom#readme"
+  "homepage": "https://github.com/Multiplicom/axiom#readme",
+  "devDependencies": {
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
+    "webpack": "^2.2.1"
+  }
 }
