--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -r dist && webpack --display-modules --bail"
+    "build": "touch dist && rm -r dist && webpack --bail"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,7 @@
     "babel-preset-env": "^1.6.1",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
+    "progress-bar-webpack-plugin": "^1.10.0",
     "style-loader": "^0.19.0",
     "webpack": "^3.8.1"
   }
