--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.1.0-alpha.1",
   "description": "Axiom is an HTML5/JavaScript library for dynamic layouting and rendering of graphical elements on a web browser page, such as tables, plots and controls.",
   "main": "./dist/axiom.js",
-  "test": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "touch dist && rm -r dist && webpack --bail"
@@ -37,5 +36,15 @@
     "progress-bar-webpack-plugin": "^1.10.0",
     "style-loader": "^0.19.0",
     "webpack": "^3.8.1"
+  },
+  "dependencies": {
+    "awesomplete": "^1.1.2",
+    "blob.js": "^1.0.1",
+    "codemirror": "^5.32.0",
+    "file-saver": "^1.3.3",
+    "jquery": "^1.11.3",
+    "jquery-mousewheel": "^3.1.13",
+    "jquery.cookie": "^1.4.1",
+    "lodash": "^1.3.1"
   }
 }
