--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "@multiplicom/axiom",
-  "version": "1.2.0-beta.9",
+  "version": "1.2.0-beta.13",
   "description": "Axiom is an HTML5/JavaScript library for dynamic layouting and rendering of graphical elements on a web browser page, such as tables, plots and controls.",
   "main": "./dist/axiom.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "touch dist && rm -r dist && webpack --display-reasons --display-modules --bail",
-    "publish": "npm publish"
+    "build": "touch dist && rm -r dist && webpack --display-reasons --display-modules --bail"
   },
   "repository": {
     "type": "git",
