--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@multiplicom/axiom",
-  "version": "1.2.0-beta.13",
+  "version": "1.2.0-rc.17",
   "description": "Axiom is an HTML5/JavaScript library for dynamic layouting and rendering of graphical elements on a web browser page, such as tables, plots and controls.",
   "main": "./dist/axiom.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "touch dist && rm -r dist && webpack --display-reasons --display-modules --bail"
+    "build": "touch dist && rm -r dist && webpack --progress --display-modules --bail"
   },
   "repository": {
     "type": "git",
@@ -31,12 +31,11 @@
     "babel-core": "^6.21.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
+    "clean-webpack-plugin": "^0.1.18",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
-    "progress-bar-webpack-plugin": "^1.10.0",
     "style-loader": "^0.19.0",
-    "webpack": "^3.8.1",
-    "expose-loader": "^0.7.4"
+    "webpack": "^3.8.1"
   },
   "dependencies": {
     "awesomplete": "^1.1.2",
@@ -47,8 +46,5 @@
     "jquery-mousewheel": "^3.1.13",
     "jquery.cookie": "^1.4.1",
     "lodash": "^1.3.1"
-  },
-  "peerDependencies": {
-    "jquery": "^1.11.3"    
   }
 }
