--- a/package.json
+++ b/package.json
@@ -1,49 +1,56 @@
 {
-  "name": "@multiplicom/axiom",
-  "version": "1.2.0-rc.6",
-  "description": "Axiom is an HTML5/JavaScript library for dynamic layouting and rendering of graphical elements on a web browser page, such as tables, plots and controls.",
-  "main": "./dist/axiom.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "touch dist && rm -r dist && webpack --progress --display-modules --bail"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Multiplicom/axiom.git"
-  },
-  "files": [
-    "dist/**/*.*"
-  ],
-  "author": {
-    "name": "Paul Vauterin"
-  },
-  "maintainers": [
-    "Michael Vyverman",
-    "Michiel Vermeir"
-  ],
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Multiplicom/axiom/issues"
-  },
-  "homepage": "https://github.com/Multiplicom/axiom#readme",
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.21.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
-    "clean-webpack-plugin": "^0.1.18",
-    "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "style-loader": "^0.20.1",
-    "webpack": "^3.8.1"
-  },
-  "dependencies": {
-    "awesomplete": "^1.1.2",
-    "codemirror": "^5.32.0",
-    "file-saver": "^1.3.3",
-    "jquery": "^1.11.3",
-    "jquery-mousewheel": "^3.1.13",
-    "jquery.cookie": "^1.4.1",
-    "lodash": "^1.3.1"
-  }
+    "name": "@multiplicom/axiom",
+    "version": "1.2.0-rc.6.3",
+    "description": "Axiom is an HTML5/JavaScript library for dynamic layouting and rendering of graphical elements on a web browser page, such as tables, plots and controls.",
+    "main": "./dist/axiom.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "webpack --progress --display-modules --bail"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Multiplicom/axiom.git"
+    },
+    "files": [
+        "dist/**/*.*"
+    ],
+    "author": {
+        "name": "Paul Vauterin"
+    },
+    "maintainers": [
+        "Michael Vyverman",
+        "Michiel Vermeir"
+    ],
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/Multiplicom/axiom/issues"
+    },
+    "homepage": "https://github.com/Multiplicom/axiom#readme",
+    "devDependencies": {
+        "babel-cli": "^6.26.0",
+        "babel-core": "^6.21.0",
+        "babel-loader": "^7.1.2",
+        "babel-plugin-transform-react-jsx": "^6.24.1",
+        "babel-preset-env": "^1.6.1",
+        "clean-webpack-plugin": "^0.1.18",
+        "css-loader": "^0.28.7",
+        "extract-text-webpack-plugin": "^3.0.2",
+        "style-loader": "^0.20.1",
+        "webpack": "^3.8.1",
+        "react": "^16.2.0",
+        "react-dom": "^16.2.0"
+    },
+    "dependencies": {
+        "awesomplete": "^1.1.2",
+        "codemirror": "^5.32.0",
+        "file-saver": "^1.3.3",
+        "jquery": "^1.11.3",
+        "jquery-mousewheel": "^3.1.13",
+        "jquery.cookie": "^1.4.1",
+        "lodash": "^1.3.1"
+    },
+    "peerDependencies": {
+        "react": "^16.2.0",
+        "react-dom": "^16.2.0"
+    }
 }
