--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Michiel Vermeir <michiel.vermeir@agilent.com>",
   "license": "MIT",
   "dependencies": {
+    "awesomplete": "1.1.5",
     "core-js": "^3.6.0",
     "file-saver": "^2.0.2",
     "he": "^1.2.0",
