--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "awesomplete": "1.1.5",
     "core-js": "^3.6.0",
+    "delegate": "^3.2.0",
     "file-saver": "^2.0.2",
     "he": "^1.2.0",
     "jquery": "^3.4.1",
