--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "awesomplete": "1.1.5",
     "core-js": "^3.6.0",
     "delegate": "^3.2.0",
+    "eslint-plugin-axiom": "/Users/mvermeir/code/eslint-plugin-axiom",
     "file-saver": "^2.0.2",
     "he": "^1.2.0",
     "jquery": "^3.4.1",
@@ -17,5 +18,12 @@
     "js-cookie": "^2.2.1",
     "lodash": "^4.1.15",
     "nearley": "^2.19.0"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.8.0"
+  },
+  "scripts": {
+    "lint:autofix": "eslint --fix '**/*.js'"
   }
 }
