use fontaweosme from package instead of link

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "core-js": "^3.6.0",
     "delegate": "^3.2.0",
     "file-saver": "^2.0.2",
+    "font-awesome": "^4.7.0",
     "he": "^1.2.0",
     "jquery": "^3.4.1",
     "jquery-datetimepicker": "^2.5.21",
@@ -19,9 +20,9 @@
     "nearley": "^2.19.0"
   },
   "devDependencies": {
-    "eslint-plugin-axiom": "https://github.com/Multiplicom/eslint-plugin-axiom/",
     "babel-eslint": "^10.0.3",
-    "eslint": "^6.8.0"
+    "eslint": "^6.8.0",
+    "eslint-plugin-axiom": "https://github.com/Multiplicom/eslint-plugin-axiom/"
   },
   "scripts": {
     "lint:autofix": "eslint --fix '**/*.js'"
